--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from realestics.temptics.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 26 Apr 2025 12:35:47 GMT -->
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realestics - Real Estate HTML Template</title>
+    <title>Lap Builders</title>
 
     <!-- libraries CSS -->
     <link rel="stylesheet" href="assets/icon/flaticon_real_estate.css">
@@ -31,7 +28,7 @@
         <!-- header -->
         <div class="ul-sidebar-header">
             <div class="ul-sidebar-header-logo">
-                <a href="index-2.html">
+                <a href="index.html">
                     <img src="assets/img/logo_footer.png" alt="logo" class="logo">
                 </a>
             </div>
@@ -449,7 +446,7 @@
             </div>
         </section>
         <!-- about end -->
-      
+
         <!-- PROPERTY FILTER SEARCH SECTION START -->
         <section class="ul-property-filter-search ul-section-spacing pt-10">
             <div class="ul-property-filter-search-container">
@@ -1345,7 +1342,7 @@
             </div>
         </section>
         <!-- PROPERTIES SECTION END -->
-  <!-- FEATURES SECTION START -->
+        <!-- FEATURES SECTION START -->
         <section class="ul-features ul-section-spacing">
             <div class="ul-inner-page-container">
                 <div class="ul-features-content wow animate__fadeInUp">
@@ -1751,7 +1748,7 @@
                     <!-- <div class="row ul-bs-row"> -->
                     <!-- <div class="col-4"> -->
                     <div class="ul-footer-about">
-                        <a href="index-2.html"><img src="assets/img/logo_footer.png" alt="logo"></a>
+                        <a href="index.html"><img src="assets/img/logo_footer.png" alt="logo"></a>
                         <!-- <p class="ul-footer-about-txt"> we can match you with a house you will want to call home.</p> -->
                         <Address><b>Office Addreess:</b> Sha Ali Tower, Karwan Bazar, Dhaka</Address>
                         <div class="ul-footer-socials">
@@ -1834,7 +1831,7 @@
 
         <!-- footer bottom -->
         <div class="ul-footer-bottom">
-            <p class="copyright-txt">&copy;2024 Realestics. All rights reserved</p>
+            <p class="copyright-txt">&copy;2025 Lap Builders. All rights reserved</p>
         </div>
 
         <!-- vector -->
@@ -1861,8 +1858,5 @@
     <script src="assets/js/tab.js"></script>
     <!-- <script src="assets/js/countdown.js"></script> -->
 </body>
-
-
-<!-- Mirrored from realestics.temptics.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 26 Apr 2025 12:36:17 GMT -->
 
 </html>
