title and footer name change

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lap Builders</title>
+    <title>Lap Real Estate</title>
 
     <!-- libraries CSS -->
     <link rel="stylesheet" href="assets/icon/flaticon_real_estate.css">
@@ -425,7 +425,7 @@
 
         <!-- footer bottom -->
         <div class="ul-footer-bottom">
-            <p class="copyright-txt">&copy;2025 Lap Builders. All rights reserved</p>
+            <p class="copyright-txt">&copy;2025 Lap Real Estate. All rights reserved</p>
         </div>
 
         <!-- vector -->
